--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,8 +17,8 @@ jobs:
           fetch-depth: 0
       - name: before_install
         run: |
-         apt update
-         apt install -y xorg-dev libglu1-mesa-dev x11proto-xf86vidmode-dev
+         sudo apt update
+         sudo apt install -y xorg-dev libglu1-mesa-dev x11proto-xf86vidmode-dev
       - name: install
         run: |
          wget https://github.com/glfw/glfw/archive/3.0.4.tar.gz
@@ -26,9 +26,9 @@ jobs:
          pushd glfw-3.0.4/
          cmake .
          make
-         make install
+         sudo make install
          popd
-         apt install -y libglm-dev
+         sudo apt install -y libglm-dev
       - name: before_script
         run: pushd build/
       - name: script
