--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,11 @@ jobs:
         run: pushd build/
       - name: script
         run: |
+         sudo ls -lah /
+         sudo ls -lah /home/
+         sudo ls -lah /home/runner/
+         sudo ls -lah /home/runner/work
+         sudo ls -lah /home/runner/work/openbtg
          cmake ..
          make
       - name: after_script
