--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,9 @@ jobs:
          sudo ls -lah /home/runner/
          sudo ls -lah /home/runner/work
          sudo ls -lah /home/runner/work/openbtg
+         sudo ls -lah /home/runner/work/openbtg/openbtg
+         sudo ls -lah
+         sudo ls -lah ..
          cmake ..
          make
       - name: after_script
