--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
         run: pushd build/
       - name: script
         run: |
-         cmake
+         cmake .
          make
       - name: after_script
         run: popd
