--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,4 +36,10 @@ jobs:
          cmake .
          make
       - name: print_result
-        run: ls -lah
+        run: |
+         ls -lah ./build
+      - name: upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: openbtg_build_artifacts
+          path: ./build
