--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
         run: pushd build/
       - name: script
         run: |
-         cmake -S . -B /tmp/openbtg
+         cmake .
          make
       - name: print_result
         run: |
@@ -42,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: openbtg_build_artifacts
-          path: /tmp/openbtg
+          path: ./mortar
