--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,7 @@ jobs:
       - name: before_install
         run: |
          sudo apt update
-         sudo apt install -y xorg-dev libglu1-mesa-dev x11proto-xf86vidmode-dev mingw-w64
+         sudo apt install -y xorg-dev libglu1-mesa-dev x11proto-xf86vidmode-dev mingw-w64 mingw-w64-common mingw-w64-i686-dev mingw-w64-tools mingw-w64-tools-dbgsym mingw-w64-x86-64-dev 
       - name: install
         run: |
          wget https://github.com/glfw/glfw/archive/3.3.7.tar.gz
@@ -63,13 +63,15 @@ jobs:
          cmake .
          make
          sudo make install
+         cmake -DCMAKE_TOOLCHAIN_FILE=CMake/x86_64-w64-mingw32.cmake .
+         make
          popd
          sudo apt install -y libglm-dev
       - name: before_script
         run: pushd build/
       - name: script
         run: |
-         x86_64-w64-mingw32-cmake .
+         cmake -DCMAKE_TOOLCHAIN_FILE=CMake/x86_64-w64-mingw32.cmake .
          make
       - name: print_result
         run: |
